<resources>
    <string name="app_name">Proyecto1</string>
    <string name="Titulo1">LAS ENCHILADAS</string>
    <string name="TITULO2">MENU</string>
    <string name="TITULO3">¿QUE SON?</string>
    <string name="Titulo4">TIPOS</string>
    <string name="Titulo5">RECETAS</string>
    <string name="Titulo6">ENCHILADAS VERDES</string>
    <string name="Titulo7">ENCHILADAS ROJAS</string>
    <string name="Titulo8">Enchiladas Suizas</string>
    <string name="Titulo9">Historia</string>
    <string name="Titulo10">Enchiladas Potosinas</string>
    <string name="Titulo11">Historia</string>
    <string name="Titulo12">CREADO POR:</string>
    <string name="btnqueson">¿Que son?</string>
    <string name="btntipos">TIPOS</string>
    <string name="btnrecetas">RECETAS</string>
    <string name="btnby">Creador</string>
    <string name="btnregresar1">REGRESAR</string>
    <string name="btnverdes">ENCHILADAS VERDES</string>
    <string name="btnrojas">ENCHILADAS ROJAS</string>
    <string name="btnsuizas">ENCHILADAS SUIZAS</string>
    <string name="btnpotosinas">ENCHILADAS POTOSINAS</string>
    <string name="btnregresar3">REGRESAR</string>
    <string name="btnregresar2">REGRESAR</string>
    <string name="btnregresar5">REGRESAR</string>
    <string name="btnhistoria1">HISTORIA</string>
    <string name="btnregresar6">REGRESAR</string>
    <string name="btnregresar7">REGRESAR</string>
    <string name="btnregresar8">REGRESAR</string>
    <string name="btnregresar9">REGRESAR</string>
    <string name="btnhistoria2">HISTORIA</string>
    <string name="btnregresar10">REGRESAR</string>
    <string name="btnregresar11">REGRESAR</string>
    <string name="nombre">ULISES CASTAÑEDA CARLOS</string>
    <string name="GRUPO">7T11</string>
    <string name="INSTITUTO">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="HISTORIAP">La historia oficial tiene una inventora única de estas enchiladas, doña Cristina Jalomo (1874-1973).  Mujer del municipio de Soledad, entonces un pueblo distante de la ciudad de San Luis, hoy un municipio conurbado, el más grande. Según cuentan varios reportajes periodísticos, doña Cristina produjo la masa propia de estas enchiladas por casualidad, cuando en el molino del lugar se le contaminó la masa de nixtamal con los chiles molidos. Masa que decidió cocinar en tortillas que resultaron deliciosas para su familia, puesto que tenían el claro sabor y picor del chile cascabel propio de las huertas de Soledad. Así comenzó a pedir que molieran ya siempre su masa con chiles para cocinar de modo cotidiano tan ricas tortillitas, porque las tortillas propias de la ciudad de San Luis son pequeñitas. Pronto la señora Jalomo usó estas tortillas para cocinar quesadillas, auténticas quesadillas, pues las rellenó con queso y salsa de chiles, un poco de crema encima y ya están, las enchiladas potosinas –entendiendo en este caso el concepto de “potosino” como un distintivo específico de la ciudad de San Luis Potosí pero no del estado político entero que hoy lleva ese nombre. De hecho, son potosinas de Soledad, un punto muy específico. Que comenzó a ser más y más visitado los fines de seamana por la gente de la ciudad, por ir a probar esas enchiladas que doña Cristina un día comenzó a vender en la plaza del entonces pueblito los domingos y días de fiesta. Ya que después de conquistar el gusto de su familia entera, esta receta de la señora Cristina Jolomo sedujo el gusto de sus vecinos, lo que la condujo a la venta pública de su producto y de ahí a la fama que hoy tiene y el lugar historiográfico que ocupa, en tanto la primera persona documentada como “inventora” de esta enchiladas.</string>
    <string name="HISTORIAS">Las enchiladas suizas tienen una historia poco conocida, y todo apunta a que fueron creadas en lo que hoy es Sanborn’s de los Azulejos.  La historia comienza a mediados del siglo XIX, durante el imperio de Maximiliano de Hasburgo. Había un hombre, el mayordomo de Maximiliano, que se encargaba de la alimentación del emperador. Al caer el imperio, este hombre y su familia huyeron a Coahuila, su lugar de origen, y con ellos se llevaron gran cantidad de recetas.  La revolución mexicana fue muy dura en el norte, obligando a la familia del antiguo mayordomo a emigrar a la capital del país. Con la necesidad de ganar dinero y un baúl lleno de las recetas de la familia imperial, la familia del antiguo mayordomo puso un restaurante llamado: “Café Imperial”. Sería en este café donde nacerían las Enchiladas Suizas.  Aquí hay dos versiones:  En la primera se cuenta que la esposa del mayordomo le ponía nombres a los platillos del café relacionados con la casa de Hasburgo. Así el restaurante tendría platillos como Las enchiladas suizas “Panqué Imperio” o las famosas “Enchiladas Suizas”. Estas últimas pasarían a la historia, y se seguirían preparando en los restaurantes que ocuparon el lugar tras el cierre del “Café Imperial”, hasta la llegada de los hermanos Sanborn’s quienes les darían a las Enchiladas Suizas su gran fama. La segunda historia que se cuenta es más bien sobre el origen del nombre. Cuando Walter Sanborn conoció este platillo preparado con queso gratinado y queso encima, dijo que le recordaba mucho a la nieve que se encontraba sobre los Alpes suizos, y de ahí el nombre. Ambas historias se relacionan, difiriendo únicamente en el origen del nombre. Lo importante aquí es que gracias a estos hombres, hoy podemos disfrutar en nuestros hogares de uno de los platillos más representativos de México.</string>
    <string name="TIPOS">Entre las enchiladas más comunes se encuentran: Enchiladas verdes: preparadas con una salsa basada en tomates verdes cocidos. Enchiladas rojas: la base de su salsa puede ser el jitomate o chiles secos (chile guajillo) que le den el color rojo. Enchiladas suizas: preparadas con una salsa verde con base en una crema de leche y cubiertas de queso gratinado, en vez del queso fresco más usual en otro tipo de enchiladas. En algunos restaurantes se suelen preparar con salsa roja no-picante, usando jitomate en su preparación. Enchiladas de mole: cubiertas de mole poblano y ocasionalmente aderezadas con ajonjolí. Enchiladas de frijol: cubiertas con frijoles. También llamadas Enfrijoladas Enchiladas de chilorio: que son de carne de puerco. Enchiladas potosinas: hechas con tortillas pequeñas, rellenas de requesón o puré de frijoles y picante Enchiladas Mexicanas: preparadas con salsa verde, crema y salsa roja, en orden de los colores de la bandera de México Enchiladas Norteñas: la base de la salsa es tomate y chile chipotle, con queso gratinado y generalmente rellenas de pollo o papa Enchiladas del suelo: es una variedad en la cual la tortilla no se fríe, se pasa por una sala roja picante y espesa, y después se pone un poco en el asador, se rellena de papa con queso de cuaje y crema al gusto, son más bien secas. Originales de Sinaloa. Enchiladas de mole rojo en el estado de oaxaca son muy tipicas en algunos pueblos como cuicatlan, son una mezcla de salsa de color naranja y a este se le llama mole rojo, se dora la tortilla se le coloca pollo en el centro de la tortilla y se sumerge durante uno o dos minutos se les pone queso, crema y cebolla en rodajas finas. Enchiladas Encremadas: cualquier tipo de relleno y se bañan en salsa de crema. Enchiladas Entomatadas tampiqueñas: tortilla pequeña hecha a mano, bañada en salsa de tomate con queso de cuaje encima, éstas generalmente acompañan la carne a la tampiqueña. Enchiladas dulces: originales de Colima, tienen un sabor dulce ya que al mole se le agrega piloncillo y pasas.</string>
    <string name="QUESON">Ocupan uno de los principales lugares dentro de la categoría de antojitos en la cocina Mexicana, elaborado con tortillas de maíz bañadas en salsa de chiles y rellenas de un guiso, principalmente pollo o frijoles. Se sirven con una guarnición por encima, como puede ser lechuga, queso y crema ácida. Existen muchas variantes, como las enchiladas verdes, con mole, potosinas, placeras o suizas. Estas últimas se elaboran con caldo de tomate y queso gratinado.     Se derivan de la tortilla, cuyo origen se remonta a las civilizaciones precolombinas de Mesoamérica. Para algunos historiadores, las enchiladas fueron conocidas en el México Independiente cuando Miguel Hidalgo, Vicente Guerrero y José María Morelos viajaban por el territorio mexicano. Entre los lugares que visitaban, comieron tlacoyos, tostadas, gordas, sopes y enchiladas. También probaron atoles, chocolates y pulque.</string>
    <string name="ROJAS">1 kg pechuga de pollo o pollo entero 4-5 salsas del pato Tortillas amarillas 1 cebolla morada Limones suficientes para curtir 1 lechuga al gusto Aguacate Crema squeeze Lala Al gusto queso fresco</string>
    <string name="rojas2">Poner a cocer la pechuga o pollo y sazonar al gusto, yo utilizo un poco de cebolla, knorr de pollo, sal de ajo y un poco de sal. Una vez listo desmenuzamos el pollo. En lo que está el pollo picamos nuestra verdura, la cebolla morada la curtimos con suficiente limón, sal y pimienta lo tapamos y lo refrigeramos.</string>
    <string name="rojas3">En un sartén agregar un poco de aceite, ya que esté caliente agregamos las salsas del pato y dejamos hervir, en otro sartén agregamos aceite suficiente para freír nuestra tortilla (no debe quedar dorada, solo la vamos a pasar por aceite para que no se nos rompa).</string>
    <string name="rojas4">Ya que estén listas las tortillas las vamos a pasar al sartén donde tenemos la salsa del pato, de preferencia de 2 en 2 para que no se nos remojen, ya que estén bañadas las sacamos a plato y le añadimos la pechuga por último las enrollamos y las preparamos con verdura.</string>
    <string name="ingredientes">Tortilla, pollo, queso para gratinar, crema Acompañamiento Arroz,frijol, (opcional)</string>
    <string name="suizas">Cocer pollo con sal ajo cebolla, desmenuzar</string>
    <string name="suizas2">Tortillas calentitas con o sin aceite se rellenan de pollo y se les pone encima crema y queso para derretir se ponen unos segundos en el micro y listo</string>
    <string name="ingredientesp">200 gr. Masa de nixtamal 1 Pieza Chile ancho 100 gr. Queso fresco 100 gr. Jitomate 1 pieza Chile serrano 1/2 pieza Aguacate 1/4 Cebolla 1 pieza Limón 200 gr. Frijoles refritos (opcional)</string>
    <string name="pasos">Desvenar e hidratar el chile; cocer el jitomate junto con el chile y molerlos en el molcajete; elaborar un guacamole con el aguacate, cebolla y limón.</string>
    <string name="pasos2">Incorporar con el chile licuado, hasta formar una masa tintada con chile ancho.     Mezclar la salsa de jitomate con el queso y reservar.     Elaborar tortillas de 15 cm. de diámetro y ponerlas en el comal caliente, cuando se despeguen, rellenar con la salsa de queso, doblar y oprimir para que se junten las orillas.     Servir con el guacamole y frijoles refritos (opcional).</string>
    <string name="potosinass">potosinas</string>
    <string name="suizass">suizass</string>
    <string name="rojass">rojass</string>
    <string name="mantel">mantel</string>
</resources>